--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   dio: ^5.3.3
   flutter:
     sdk: flutter
+  fluttertoast: ^8.2.2
   provider: ^6.0.5
   shared_preferences: ^2.2.0
   sqflite: ^2.2.8+4
