--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_core: ^2.19.0
   flutter:
     sdk: flutter
+  easy_localization: ^3.0.3
   fluttertoast: ^8.2.2
   provider: ^6.0.5
   shared_preferences: ^2.2.0
@@ -55,9 +56,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - translations/
+    # - images/a_dot_burr.jpeg
+    # - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
